[gd_scene load_steps=9 format=3 uid="uid://dlxb4f60m37q3"]

[ext_resource type="Script" uid="uid://dwp4i3icru5bt" path="res://Menu/TriumphChoice.gd" id="1_k878m"]
[ext_resource type="PackedScene" uid="uid://dtsvp7okoe2s6" path="res://Mould/Mould.tscn" id="2_hnaq3"]
[ext_resource type="Shader" uid="uid://p3mvclycg3my" path="res://Card/Card.gdshader" id="3_g6tak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k878m"]
bg_color = Color(0.215686, 0.196078, 0.176471, 1)

[sub_resource type="Gradient" id="Gradient_6av1v"]
offsets = PackedFloat32Array(0, 0.933333, 1)
colors = PackedColorArray(0.917647, 0.956863, 0.698039, 0, 0.817717, 0.86, 0.3526, 0.25098, 0.817717, 0.86, 0.3526, 0.501961)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pgrey"]
noise_type = 3
frequency = 0.0215
fractal_octaves = 4
fractal_lacunarity = 2.5
fractal_gain = 0.4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ia3ss"]
width = 316
seamless = true
color_ramp = SubResource("Gradient_6av1v")
noise = SubResource("FastNoiseLite_pgrey")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hnaq3"]
resource_local_to_scene = true
shader = ExtResource("3_g6tak")
shader_parameter/noise = SubResource("NoiseTexture2D_ia3ss")
shader_parameter/offset = Vector2(0, 0)

[node name="TriumphChoice" type="PanelContainer"]
offset_right = 182.0
offset_bottom = 78.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k878m")
script = ExtResource("1_k878m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TriumphContainer" type="Container" parent="VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Description" type="RichTextLabel" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(174, 0)
layout_mode = 2
bbcode_enabled = true
text = "A test description"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Choose" type="Button" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
focus_mode = 0
text = "Choose"

[node name="Mould" parent="." instance=ExtResource("2_hnaq3")]
material = SubResource("ShaderMaterial_hnaq3")
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/CenterContainer/Choose" to="." method="_on_choose_pressed"]
